[package]
name = "parsley-rs"
version = "0.3.1"
edition = "2021"
authors = ["Noah Shanaberger <noah@thenoah.party>"]
description = "My attempt at a Rust parsing and lexing library."
license = "MIT"
homepage = "https://github.com/32Bites/parsley-rs/"
repository = "https://github.com/32Bites/parsley-rs/"
readme = "README.md"
keywords = ["lexer", "parser", "lexing", "parsing", "analysis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
character-stream = "0.7.0"
unicode_reader = "1.0.2"
itertools = "0.10"