[package]
name = "parsley-rs-hack"
version = "0.1.0"
edition = "2021"
description = "A hack for parsley-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
filepath = "0.1.2"
url = "2.2.2"